<?xml version="1.0"?>
<package format="2">
  <name>jsk_database</name>
  <version>0.0.0</version>
  <description>The jsk_database package</description>

  <maintainer email="shingogo.5511@gmail.com">Shingo Kitagawa</maintainer>
  <author email="shingogo.5511@gmail.com">Shingo Kitagawa</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>audio_video_recorder</exec_depend>
  <exec_depend>influxdb_store</exec_depend>

  <export>
  </export>

</package>
